test/programs/good/typechecker/new_1.lq
main :: Qbit
main = new @1
