test/programs/bad/typechecker/bit_2.lq
a :: !Bit
a = new @1
